# objw

./: README.rst  pyproject.toml
mods/: fnd.py  log.py  tdo.py
objw/: __init__.py  disk.py  find.py  workdir.py
objx/: __init__.py  object.py
