[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objw"
description = "objects workdir"
version = "2"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
dependencies = [
    "objx",
]
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/objw"
"bugs" = "https://github.com/rssbotd/objw/issues"
"source" = "https://github.com/rssbotd/objw"


[tool.setuptools]
packages = [
    'objw',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objw" = [
    "README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
